--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Hacker-Blog
+title: Hayker-Blog
 description: "A Jekyll Blog Theme For Hackers"
 author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
+  name: "Heyker"
+  email: "@whatever"
   url: "https://ashishchaudhary.in/hacker-blog"
 
 baseurl: /
