--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "A Jekyll Blog Theme For Hackers"
 author:
   name: "Heyker"
   email: "@whatever"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  url: "https://gg686-jkl.github.io/"
 
 baseurl: /
 
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2020"
+owner : "Hayker"
+year : "2025"
